--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 
+	// H2 데이터베이스
+	runtimeOnly 'com.h2database:h2'
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	annotationProcessor 'org.projectlombok:lombok'
