--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,34 @@
 spring.application.name=backend
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/greendb?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/greendb?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #JPA? ???? Hibernate? ?????  ???  SQL? ???? ???
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+
+# ?? ??
+# -----------------------------
+# H2 ?????? ??
+# -----------------------------
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+# -----------------------------
+# JPA / Hibernate ??
+# -----------------------------
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
+# -----------------------------
+# H2 ?? (??)
+# -----------------------------
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
